--- a/server/package.json
+++ b/server/package.json
@@ -2,9 +2,9 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "tsx watch src/server.ts "
   },
   "keywords": [],
   "author": "",
@@ -16,7 +16,10 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
+    "@fastify/cors": "^8.2.0",
     "@prisma/client": "^4.9.0",
-    "fastify": "^4.12.0"
+    "fastify": "^4.12.0",
+    "tsx": "^3.12.2",
+    "zod": "^3.20.2"
   }
 }
